# fulgurous

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  options_windows.py
RippleDeformer/RippleDeformer/: GLSLShader.cpp  GLSLShader.h  main.cpp
RippleDeformer/RippleDeformer/shaders/: shader.frag  shader.vert
cmake/: FindGLFW.cmake
examples/: ripple.cpp  triangle.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
inc/: arraybuilder.h  buffer.h  bufferbuilder.h  context.h  drawcall.h  framebuffer.h  gl_funcalls.h  gl_typetraits.h  shader.h  shaderprogram.h  utils.h  vec.h  vertexdata.h
shaders/: ripple.frag  ripple.vert  shader.frag  shader.vert
site_scons/site_tools/: glad.py  glfw.py  win32_console.py  win32_gui.py
src/: glfw_window.cpp  ripple.cpp  shader.cpp  shaderprogram.cpp  triangle.cpp  utils.cpp
